Fix for bug 17726. Text.splitText now creates the correct type of node. Added nsITextContent::CloneContent to enable cloning without copying of the text. a=dagley r=nisheeth